# llm-nest

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
config/: config.example.toml
crates/common/: Cargo.toml
crates/common/src/: chat.rs  id.rs  lib.rs  message.rs  role.rs  usage.rs
crates/common/src/config/: mod.rs  model.rs  provider.rs
crates/events/: Cargo.toml
crates/events/src/: chat_event.rs  lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: chunk.rs  error.rs  lib.rs  model.rs  options.rs  request.rs  traits.rs
crates/provider/: Cargo.toml
crates/provider/src/: error.rs  factory.rs  lib.rs  manager.rs  parameters.rs  request.rs  response.rs  traits.rs
crates/provider/src/protocols/: mod.rs
crates/provider/src/protocols/anthropic/: provider.rs
crates/provider/src/protocols/openai/: chat.rs  convert.rs  error.rs  mod.rs  provider.rs  sse.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: builder.rs  command.rs  error.rs  event.rs  event_bus.rs  feature.rs  lib.rs  llm_service.rs  model_router.rs  plugin_manager.rs  provider_manager.rs  request.rs  router.rs  runtime.rs  scheduler.rs  session.rs  session_manager.rs  state.rs
crates/runtime/src/config/: loader.rs  mod.rs  runtime.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tools/: Cargo.toml
features/chat/: Cargo.toml
features/chat/src/: event.rs  feature.rs  lib.rs  service.rs
frontends/cli/: Cargo.toml
frontends/cli/src/: command.rs  main.rs
frontends/tui/: Cargo.toml
frontends/tui/src/: app.rs  command.rs  event.rs  logging.rs  main.rs  runner.rs  ui.rs
frontends/tui/src/widgets/: chat.rs  help.rs  input.rs  mod.rs  sidebar.rs  status.rs  suggestion.rs  util.rs
sdk/app-sdk/: README.md
