[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/runtime",
    "crates/provider",
    "crates/tools",
    "crates/storage",
    "features/chat",
    "frontends/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dashmap = "6"
futures-util = "0.3"
indicatif = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rustyline = "18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
uuid = { version = "1", features = ["v4"] }