[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
futures-util.workspace = true
async-trait.workspace = true
uuid.workspace = true
tracing.workspace = true