[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "llmn"
path = "src/main.rs"

[dependencies]
chat = { path = "../../features/chat" }
events = { path = "../../crates/events" }
runtime = { path = "../../crates/runtime" }
llm = { path = "../../crates/llm" }
common = { path = "../../crates/common" }

anyhow.workspace = true
futures-util.workspace = true
indicatif.workspace = true
rustyline.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true