[package]
name = "tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "llmnt"
path = "src/main.rs"

[dependencies]
chat = { path = "../../features/chat" }
events = { path = "../../crates/events" }
runtime = { path = "../../crates/runtime" }
llm = { path = "../../crates/llm" }
common = { path = "../../crates/common" }

anyhow.workspace = true
crossterm = "0.29"
futures-util.workspace = true
ratatui = "0.30"
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync"] }
tokio-util.workspace = true
textwrap = "0.16"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
unicode-width = "0.2"